--- a/css/style.scss
+++ b/css/style.scss
@@ -58,6 +58,9 @@ body {
         margin: auto;
         padding-top: 2rem;
         height: calc(100% - 2rem);
+        @media (max-width: 767px) {
+            padding-top: unset;
+        }
 
         .nav {
             display: flex;
@@ -65,7 +68,7 @@ body {
             padding: 2rem;
 
             @media (max-width: 767px) {
-                display: none;
+                flex-direction: column;
             }
 
             &__logo {
@@ -83,99 +86,102 @@ body {
 
                     &__link {
                         color: white;
+                        @media (max-width: 767px) {
+                            font-size: 15px;
+                        }
                     }
                 }
             }
         }
 
-        .hamburger {
-            height: 32px;
-            width: 40px;
-            z-index: 2;
-            position: relative;
-            cursor: pointer;
-            padding: 0 2rem;
+        // .hamburger {
+        //     height: 32px;
+        //     width: 40px;
+        //     z-index: 2;
+        //     position: relative;
+        //     cursor: pointer;
+        //     padding: 0 2rem;
 
-            @media (min-width: 768px) {
-                display: none;
-            }
+        //     @media (min-width: 768px) {
+        //         display: none;
+        //     }
 
-            span,
-            span::before,
-            span::after {
-                background: #79FFB1;
-                border-radius: 3px;
-                content: '';
-                position: absolute;
-                width: 40px;
-                height: 6px;
-                margin-top: 13px;
+        //     span,
+        //     span::before,
+        //     span::after {
+        //         background: #79FFB1;
+        //         border-radius: 3px;
+        //         content: '';
+        //         position: absolute;
+        //         width: 30px;
+        //         height: 3px;
+        //         margin-top: 13px;
 
-                -webkit-transition: .3s ease-in-out;
-                -moz-transition: .3s ease-in-out;
-                -o-transition: .3s ease-in-out;
-                transition: .3s ease-in-out;
-            }
+        //         -webkit-transition: .3s ease-in-out;
+        //         -moz-transition: .3s ease-in-out;
+        //         -o-transition: .3s ease-in-out;
+        //         transition: .3s ease-in-out;
+        //     }
 
-            span {
-                &::before {
-                    margin-top: -12px;
-                }
+        //     span {
+        //         &::before {
+        //             margin-top: -8px;
+        //         }
 
-                &::after {
-                    margin-top: 12px;
-                }
-            }
+        //         &::after {
+        //             margin-top: 8px;
+        //         }
+        //     }
 
-            &.active {
-                span {
-                    background: transparent;
+        //     &.active {
+        //         span {
+        //             background: transparent;
 
-                    &::before {
-                        margin-top: 0;
-                        transform: rotate(45deg);
-                    }
+        //             &::before {
+        //                 margin-top: 0;
+        //                 transform: rotate(45deg);
+        //             }
 
-                    &::after {
-                        margin-top: 0;
-                        transform: rotate(-45deg);
-                    }
-                }
-            }
-        }
+        //             &::after {
+        //                 margin-top: 0;
+        //                 transform: rotate(-45deg);
+        //             }
+        //         }
+        //     }
+        // }
 
-        .mobile-nav {
-            height: 100dvh;
-            width: 75%;
-            position: absolute;
-            top: 0;
-            left: -75%;
-            z-index: 1;
-            background: rgb(152, 252, 194);
-            background: linear-gradient(360deg, rgb(152 252 194) 0%, rgb(255, 255, 255) 100%);
-            transition: left 0.3s ease;
-            padding: 5rem 2rem;
-            box-sizing: border-box;
-            @media (min-width:768px) {
-                display: none;
-            }
-            &.active{
-                // width: 75%;
-                left: 0;
-            }
-            ul{
-                padding: 3rem;
-                list-style: none;
-                li{
-                    a{
-                        font-size: 30px;
-                        color: black;
-                        width: fit-content;
-                        display: inline-block;
-                    }
-                }
-            }
-        }
+        // .mobile-nav {
+        //     height: 100dvh;
+        //     width: 75%;
+        //     position: absolute;
+        //     top: 0;
+        //     left: -75%;
+        //     z-index: 1;
+        //     // background: rgb(152, 252, 194);
+        //     background: linear-gradient(rgb(23, 28, 35),rgb(8, 7, 11));
+        //     transition: left 0.3s ease;
+        //     padding: 5rem 2rem;
+        //     box-sizing: border-box;
+        //     @media (min-width:768px) {
+        //         display: none;
+        //     }
+        //     &.active{
+        //         // width: 75%;
+        //         left: 0;
+        //     }
+        //     ul{
+        //         padding: 3rem;
+        //         list-style: none;
+        //         li{
+        //             a{
+        //                 font-size: 30px;
+        //                 color: black;
+        //                 width: fit-content;
+        //                 display: inline-block;
+        //             }
+        //         }
+        //     }
+        // }
 
         .content-wrapper {
             padding: 2rem;
@@ -210,6 +216,9 @@ body {
 
             &_right {
                 width: 50%;
+                @media (max-width: 991px) {
+                    width: 100%;
+                }
 
                 img {
                     width: 75%;
