--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,97 @@ body::-webkit-scrollbar-thumb:hover {
   transform: translateX(0);
 }
 
+.mob-project-container {
+  background-color: black;
+  padding: 50px 0px;
+}
+.mob-project-container .text-heading-2 {
+  padding: 0 2rem;
+}
+.mob-project-container .project-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  flex: 0 0 calc(200px + 100 * (100vw - 375px) / 392);
+  min-height: calc(300px + 100 * (100vw - 375px) / 392);
+}
+.mob-project-container .project-content::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 10px;
+  padding: 2px;
+  /* control the border thickness */
+  background: linear-gradient(90deg, rgb(255, 224, 234) 20%, rgb(255, 255, 255) 40%, rgb(206, 255, 224) 90%);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  pointer-events: none;
+}
+.mob-project-container .project-content img {
+  width: 100%;
+}
+.mob-project-container .project-content .project-detail h3 {
+  margin: 10px 0px;
+}
+.mob-project-container .project-content button {
+  position: relative;
+  display: block;
+  padding: 10px 30px;
+  border-radius: 10px;
+  border: 1px solid white;
+  background: transparent;
+  transition: all 1s;
+  overflow: hidden;
+  color: white;
+  margin-top: auto;
+}
+.mob-project-container .project-content button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 10px;
+  padding: 2px;
+  /* control the border thickness */
+  background: linear-gradient(90deg, rgb(255, 224, 234) 20%, rgb(255, 255, 255) 40%, rgb(206, 255, 224) 90%);
+  transition: all 1s;
+  z-index: -1;
+  transform: translateX(-100%);
+}
+.mob-project-container .project-content button:hover {
+  color: black;
+  border: 1px solid transparent;
+}
+.mob-project-container .project-content button:hover::before {
+  transform: translateX(0);
+}
+.mob-project-container .swiper {
+  width: 100%;
+  height: 100%;
+}
+.mob-project-container .swiper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mob-project-container .swiper .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.mob-project-container .swiper .swiper-pagination {
+  margin-top: 10px;
+  position: static;
+}
+.mob-project-container .swiper .swiper-pagination .swiper-pagination-bullet {
+  background-color: white;
+}
+
 .profile-container {
   background-color: #080816;
 }
@@ -250,8 +341,8 @@ body::-webkit-scrollbar-thumb:hover {
   justify-content: center;
 }
 .profile-container .inner-wrapper .profile-content-area .profile .profile-img {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   display: block;
   margin: auto;
@@ -274,6 +365,7 @@ body::-webkit-scrollbar-thumb:hover {
   border-radius: 20px;
   display: inline-block;
   line-height: 1.5;
+  text-align: center;
 }
 .profile-container .inner-wrapper .profile-content-area .profile-content .grettings {
   font-weight: 100;
@@ -477,6 +569,22 @@ body::-webkit-scrollbar-thumb:hover {
   color: white;
 }
 
+.mobile-only {
+  display: block;
+}
+
+.desktop-only {
+  display: none;
+}
+
+@media (min-width: 992px) {
+  .mobile-only {
+    display: none;
+  }
+  .desktop-only {
+    display: block;
+  }
+}
 @keyframes wave-animation {
   0% {
     transform: rotate(0deg);
