--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,8 @@
     margin: 0;
     font-family: "Alata", sans-serif;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
 
@@ -58,6 +59,7 @@ body {
         margin: auto;
         padding-top: 2rem;
         height: calc(100% - 2rem);
+
         @media (max-width: 767px) {
             padding-top: unset;
         }
@@ -86,6 +88,7 @@ body {
 
                     &__link {
                         color: white;
+
                         @media (max-width: 767px) {
                             font-size: 15px;
                         }
@@ -216,6 +219,7 @@ body {
 
             &_right {
                 width: 50%;
+
                 @media (max-width: 991px) {
                     width: 100%;
                 }
@@ -235,7 +239,6 @@ body {
     background-color: black;
     // height: 100vh;
     overflow-x: hidden;
-
 
     .project-wrapper {
         max-width: 1200px;
@@ -332,6 +335,123 @@ body {
     }
 }
 
+.mob-project-container {
+    background-color: black;
+    padding: 50px 0px;
+
+    .text-heading-2 {
+        padding: 0 2rem;
+    }
+
+    .project-content {
+        position: relative;
+        // display: inline-block;
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        flex: 0 0 calc(200px + (300 - 200) * ((100vw - 375px) / (767 - 375)));
+        min-height: calc(300px + (400 - 300) * ((100vw - 375px) / (767 - 375)));
+
+        &::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            border-radius: 10px;
+            padding: 2px;
+            /* control the border thickness */
+            background: linear-gradient(90deg,
+                    rgb(255, 224, 234) 20%,
+                    rgb(255, 255, 255) 40%,
+                    rgb(206, 255, 224) 90%);
+            -webkit-mask:
+                linear-gradient(#fff 0 0) content-box,
+                linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
+            mask-composite: exclude;
+            pointer-events: none;
+        }
+
+        img {
+            width: 100%;
+        }
+
+        .project-detail {
+            h3 {
+                margin: 10px 0px;
+            }
+        }
+
+        button {
+            position: relative;
+            display: block;
+            padding: 10px 30px;
+            border-radius: 10px;
+            border: 1px solid white;
+            background: transparent;
+            transition: all 1s;
+            overflow: hidden;
+            color: white;
+            margin-top: auto;
+
+            &::before {
+                content: "";
+                position: absolute;
+                inset: 0;
+                border-radius: 10px;
+                padding: 2px;
+                /* control the border thickness */
+                background: linear-gradient(90deg,
+                        rgb(255, 224, 234) 20%,
+                        rgb(255, 255, 255) 40%,
+                        rgb(206, 255, 224) 90%);
+                transition: all 1s;
+                z-index: -1;
+                transform: translateX(-100%);
+            }
+
+            &:hover {
+                color: black;
+                border: 1px solid transparent;
+                // cursor: url(../assets/icons/pointer.svg), auto;
+
+                &::before {
+                    transform: translateX(0);
+                }
+            }
+        }
+    }
+
+    .swiper {
+        width: 100%;
+        height: 100%;
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            img {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        .swiper-pagination {
+            margin-top: 10px;
+            position: static;
+
+            .swiper-pagination-bullet {
+                background-color: white;
+            }
+        }
+    }
+}
+
+
 .profile-container {
     background-color: #080816;
 
@@ -371,8 +491,8 @@ body {
                 justify-content: center;
 
                 .profile-img {
-                    width: 100px;
-                    height: 100px;
+                    width: 200px;
+                    height: 200px;
                     border-radius: 50%;
                     display: block;
                     margin: auto;
@@ -397,6 +517,7 @@ body {
                         border-radius: 20px;
                         display: inline-block;
                         line-height: 1.5;
+                        text-align: center;
                     }
                 }
             }
@@ -515,6 +636,7 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: center;
+
         @media (max-width: 767px) {
             height: auto;
         }
@@ -526,9 +648,11 @@ body {
             margin-top: 50px;
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
+
             @media (max-width: 767px) {
                 gap: 25px;
             }
+
             .technology {
                 background-color: #171C23;
                 border-radius: 50px;
@@ -540,6 +664,7 @@ body {
                 justify-content: center;
                 flex-direction: column;
                 gap: 20px;
+
                 @media (max-width: 767px) {
                     border-radius: 25px;
                 }
@@ -601,20 +726,22 @@ body {
         &__logo {
             font-size: 30px;
             color: white;
+
             @media (max-width:767px) {
                 display: none;
             }
         }
-        
+
         &__items {
             display: flex;
             gap: 20px;
             align-items: center;
+
             @media (max-width:767px) {
                 width: 100%;
                 justify-content: center;
             }
-            
+
 
             &__item {
                 color: blue;
@@ -627,6 +754,23 @@ body {
     }
 }
 
+.mobile-only {
+    display: block;
+}
+
+.desktop-only {
+    display: none;
+}
+
+@media (min-width: 992px) {
+    .mobile-only {
+        display: none;
+    }
+
+    .desktop-only {
+        display: block;
+    }
+}
 
 
 @keyframes wave-animation {
